# u3d-test

./: CMakeLists.txt  README.md
assets/: test_scene_torus.glb
src/: Ball.cpp  Ball.h  CreateMaterial.cpp  CreateMaterial.h  CreatePrimitives.cpp  CreatePrimitives.h  Elevator.cpp  Elevator.h  JumpPad.cpp  JumpPad.h  KinematicRigidBody.cpp  KinematicRigidBody.h  Ladder.cpp  Ladder.h  Player.cpp  Player.h  SceneLoader.cpp  SceneLoader.h  VectorShim.h  globals.h  main.cpp
